--- a/LotzaCoins/stratum-lowdiff/algos/makefile
+++ b/LotzaCoins/stratum-lowdiff/algos/makefile
@@ -15,7 +15,7 @@ SOURCES=lyra2re.c lyra2v2.c Lyra2.c lyra2z.c lyra2z330.c Lyra2-z.c Sponge.c alli
 	bitcore.c timetravel.c x11evo.c x16r.c x16rv2.c x16s.c xevan.c bastion.c hmq17.c sonoa.c \
 	bmw.c luffa.c pentablake.c vitalium.c whirlpool.c whirlpoolx.c zr5.c \
 	scrypt.c scryptn.c sha256.c sha256t.c sha256csm.c \
-	x16rt.c sha256-d.c minotaur.c minotaurx.c curvehash.c megabtx.c megamec.c \
+	x16rt.c sha256-d.c minotaur.c minotaurx.c megabtx.c megamec.c \
 	yescrypt.c yescrypt-opt.c sha256_Y.c \
 	yespower/yespower-platform.c yespower/yespower-combined.c sha256-P.c yespower/yespower-blake2b.c yespower/crypto/blake2b-yp.c \
 	a5a.c a5amath.c m7m.c magimath.cpp velvet.c balloon.c \
