--- a/LotzaCoins/stratum-lowdiff/algos/makefile
+++ b/LotzaCoins/stratum-lowdiff/algos/makefile
@@ -28,7 +28,7 @@ SOURCES=lyra2re.c lyra2v2.c Lyra2.c lyra2z.c lyra2z330.c Lyra2-z.c Sponge.c alli
 	cryptonote/cryptonight_dark.c cryptonote/cryptonight_dark_lite.c cryptonote/cryptonight_fast.c \
 	cryptonote/cryptonight_lite.c cryptonote/cryptonight_soft_shell.c cryptonote/cryptonight_turtle.c \
 	cryptonote/cryptonight_turtle_lite.c anime.c \
-	heavyhash/heavyhash.c heavyhash/keccak_tiny.c cosa.c 0x10.c sha512_256.c
+	heavyhash/heavyhash.c heavyhash/keccak_tiny.c cosa.c 0x10.c sha512_256.c sha3d.c
 	
 OBJECTS=$(SOURCES:%.c=%.o) $(SOURCES:%.cpp=%.o) $(SOURCES:%.cc=%.o)
 OUTPUT=libalgos.a
